[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runboat"
authors = [{name = "St\u00e9phane Bidoul", email = "stephane.bidoul@gmail.com"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ansi2html",
    "fastapi",
    "gunicorn",
    "httpx",
    "jinja2",
    "kubernetes",
    "rich",
    "sse-starlette",
    "uvicorn",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-dotenv",
    "pytest-mock",
]
mypy = [
    "mypy>=0.930",
    "types-urllib3",
]

[project.urls]
Home = "https://github.com/sbidoul/runboat"

[tool.ruff]
fix = true
target-version = "py310"
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "C90", # mccabe
    "I", # isort
    "UP", # pyupgrade
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PLE", # pylint errors
    "RUF",
]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.isort]
known-first-party = ["runboat"]

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = [".env.test"]
asyncio_mode = "strict"
# flake8 config is in .flake8

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["uvicorn.*", "kubernetes.*", "ansi2html"]
ignore_missing_imports = true

[tool.pip-deepfreeze.sync]
extras = "test,mypy"
